--- a/assets/question.html
+++ b/assets/question.html
@@ -1,80 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{page_title}</title>
-    <link type="text/css" rel="stylesheet" href="/assets/styles.css" />
-</head>
-<body class="{body_class}">
-<div class="question">
-    <h1><img src="#" alt="Elliv" /></h1>
-    <h2>{question.label}</h2>
-    <div class="award-description">
-        {question.details}
-    </div>
-</div>
-<div class="options">
-    <ul>
-        {options}
-        <li id="nominee-{order}" class="nominee {is_selected?}selected{/is_selected?}">
-            <a class="nominee-text" href="#nominee-{order}-info" title="Click for more information" >{label}</a>
-            {has_image?}
-            <div class="nominee-photo">
-                <img src="{asset}" />
-            </div>
-            {/has_image?}
-            <a id="nominee-{order}" href="/poll/save_selection/{o_id}/{return_to_review}"
-               class="nominee-info" title="Click to vote for this nominee">
-                Vote for this nominee
-            </a>
-            <div id="nominee-{order}-info" class="info">
-                <div class="modal">
-                    <h2>{label}</h2>
-                    <a href="#nominee-{order}" title="Close" class="close">&times;</a>
-                    <div class="info-details">
-                        {info}
-                    </div>
-                </div>
-                <a href="#nominee-{order}" title="Close" class="close-full"></a>
-            </div>
-        </li>
-        {/options}
-    </ul>
-</div>
-<div class="nav">
-    <p class="nav-arrow">
-        <a class="arrow-left"
-           {is_first_question?}href="/poll/index/{poll_id}"{/is_first_question?}
-        {is_not_first_question?}href="/poll/question/{poll_id}/{previous_question}"{/is_not_first_question?}>
-        Back Button
-        </a>
-    </p>
-
-    <ul class="nav-icons">
-        {poll_questions}
-        <li class="nav-button">
-            <a class="{is_current?}current{/is_current?} {is_completed?}completed{/is_completed?}"
-               href="/poll/question/{poll_id}/{number}">
-                Question {number}
-            </a>
-        </li>
-        {/poll_questions}
-        <li class="nav-button nav-review">
-            <a href="/poll/review/{poll_id}" class="submit">
-                Submission page
-            </a>
-        </li>
-    </ul>
-
-    <p class="nav-arrow">
-        <a id="arrow-right"
-           {is_last_question?}href="/poll/review/{poll_id}"{/is_last_question?}
-        {is_not_last_question?}href="/poll/question/{poll_id}/{next_question}"{/is_not_last_question?}>
-        Next Button
-        </a>
-    </p>
-
-</div>
-</body>
+<html>
+    <head>
+        <title>Vote | Elliv</title>
+        <meta charset="utf-8" />
+        <link type="text/css" rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <header id="vote-header">
+            <h1 id="logo">
+                <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
+            </h1>
+            <p>Secret Talent</p>
+            <span id="click-msg">Click the names to read more!</span>
+        </header>
+        <section id="vote-main">
+                <ul id="nominee-list">
+                    <li id="nominee1" class="nominee">
+                      <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
+                       <div class="nominee-header">
+                            <a href="#" class="nominee-title">Nominee 1</a>
+                            <img src="images/arrow-01.png" class="dropdown-arrow" />
+                        </div>
+                        <div class="nominee-description">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <span class="close">&times;</span>
+                                <h2>Nominee 1</h2>
+                              </div>
+                               <img src="http://placehold.it/350x150" />
+                                <p>This is where information about this option will appear in the drop-down menu.
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li id="nominee2" class="nominee">
+                      <a href="#" class="nominee-vote" id="nominee2" title="Click to vote for this nominee">Vote here</a>
+                       <div class="nominee-header">
+                            <a href="#" class="nominee-title">Nominee 2</a>
+                            <img src="images/arrow-01.png" class="dropdown-arrow" />
+                        </div>
+                        <div class="nominee-description">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <span class="close">&times;</span>
+                                <h2>Nominee 2</h2>
+                              </div>
+                               <img src="http://placehold.it/350x300" />
+                                <p>This is where information about this option will appear in the drop-down menu.
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li id="nominee3" class="nominee">
+                       <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
+                        <div class="nominee-header">
+                            <a href="#" class="nominee-title">Nominee 3</a>
+                            <img src="images/arrow-01.png" class="dropdown-arrow" />
+                        </div>
+                        <div class="nominee-description">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <span class="close">&times;</span>
+                                <h2>Nominee 3</h2>
+                              </div>
+                               <img src="http://placehold.it/350x150" />
+                                <p>This is where information about this option will appear in the drop-down menu.
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+        </section>
+        <footer id="vote-footer">
+            <ul id="vote-nav">
+               <li id="back-btn" class="nav-btn">
+                    <a href="#">&laquo; Back</a>
+                </li>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page on-page" title="page-1">Page 1</a>
+                </li>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page" title="page-2">Page 2</a>
+                </li>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page" title="page-3">Page 3</a>
+                </li>
+                <li id="next-btn" class="nav-btn">
+                    <a href="#">Next &raquo;</a>
+                </li>
+            </ul>
+        </footer>
+        <div class="shade"></div>
+    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="vote.js"></script>
 </html>
