--- a/assets/review.html
+++ b/assets/review.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{page_title}</title>
-    <link type="text/css" rel="stylesheet" href="/assets/styles.css" />
-</head>
-<body class="{body_class}">
+!DOCTYPE html>
+<html>
+    <head>
+        <title>Vote | Elliv</title>
+        <meta charset="utf-8" />
+        <link type="text/css" rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <header id="vote-header">
+            <h1 id="logo">
+                <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
+            </h1>
+            <p>Secret Talent</p>
+            <span id="click-msg">Click the names to read more!</span>
+        </header>
+        <section id="vote-main">
 <div class="question">
     <h1><img src="#" alt="Elliv"></h1>
     <h2>Are you ready to submit?</h2>
@@ -37,5 +44,28 @@
     </ul>
     {/has_ballot_items?}
 </div>
-</body>
+</section>
+ <footer id="vote-footer">
+            <ul id="vote-nav">
+               <li id="back-btn" class="nav-btn">
+                    <a href="#">&laquo; Back</a>
+                </li>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page on-page" title="page-1">Page 1</a>
+                </li>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page" title="page-2">Page 2</a>
+                </li>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page" title="page-3">Page 3</a>
+                </li>
+                <li id="next-btn" class="nav-btn">
+                    <a href="#">Next &raquo;</a>
+                </li>
+            </ul>
+        </footer>
+        <div class="shade"></div>
+    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="vote.js"></script>
 </html>
