--- a/assets/question.html
+++ b/assets/question.html
@@ -5,12 +5,13 @@
         <meta charset="utf-8" />
         <link type="text/css" rel="stylesheet" href="styles.css" />
     </head>
-    <body>
+    <body class="questions-page">
         <header id="vote-header">
             <h1 id="logo">
                 <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
             </h1>
-            <p>Secret Talent</p>
+            <h2>Unsung Hero</h2>
+            <p class="description">You've chosen. Here's the top three duos on campus that have a little more than their faith in common.</p>
             <span id="click-msg">Click the names to read more!</span>
         </header>
         <section id="vote-main">
@@ -18,17 +19,17 @@
                     <li id="nominee1" class="nominee">
                       <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
                        <div class="nominee-header">
-                            <a href="#" class="nominee-title">Nominee 1</a>
+                            <a href="#" class="nominee-title">Rebecca Adams</a>
                             <img src="images/arrow-01.png" class="dropdown-arrow" />
                         </div>
                         <div class="nominee-description">
                             <div class="modal-content">
                               <div class="modal-header">
                                 <span class="close">&times;</span>
-                                <h2>Nominee 1</h2>
                               </div>
-                               <img src="http://placehold.it/350x150" />
-                                <p>This is where information about this option will appear in the drop-down menu.
+                               <img src="images/2-MaggieHuff.jpg" />
+                               <h2>Rebecca Adams</h2>
+                                <p>&ldquo;She tirelessly serves her team is always willing to help you with whatever you need, even if she doesn't really have the time to give. She sacrifices her time for the good of others.&rdquo;
                                 </p>
                             </div>
                         </div>
@@ -36,17 +37,17 @@
                     <li id="nominee2" class="nominee">
                       <a href="#" class="nominee-vote" id="nominee2" title="Click to vote for this nominee">Vote here</a>
                        <div class="nominee-header">
-                            <a href="#" class="nominee-title">Nominee 2</a>
+                            <a href="#" class="nominee-title">Aogu Suzuki</a>
                             <img src="images/arrow-01.png" class="dropdown-arrow" />
                         </div>
                         <div class="nominee-description">
                             <div class="modal-content">
                               <div class="modal-header">
                                 <span class="close">&times;</span>
-                                <h2>Nominee 2</h2>
                               </div>
                                <img src="http://placehold.it/350x300" />
-                                <p>This is where information about this option will appear in the drop-down menu.
+                               <h2>Aogu Suzuki</h2>
+                                <p>&ldquo;I've seen him serve again and again; I've seen how he stops whatever he is doing to listen to me and others, to go do something for someone, and to go out of his way to give and be there for people.&rdquo;
                                 </p>
                             </div>
                         </div>
@@ -54,17 +55,17 @@
                     <li id="nominee3" class="nominee">
                        <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
                         <div class="nominee-header">
-                            <a href="#" class="nominee-title">Nominee 3</a>
+                            <a href="#" class="nominee-title">Miranda Dyson</a>
                             <img src="images/arrow-01.png" class="dropdown-arrow" />
                         </div>
                         <div class="nominee-description">
                             <div class="modal-content">
                               <div class="modal-header">
                                 <span class="close">&times;</span>
-                                <h2>Nominee 3</h2>
                               </div>
                                <img src="http://placehold.it/350x150" />
-                                <p>This is where information about this option will appear in the drop-down menu.
+                               <h2>Miranda Dyson</h2>
+                                <p>&ldquo;She listens to you and is willing to look past differences to see and understand you.&rdquo;
                                 </p>
                             </div>
                         </div>
@@ -84,6 +85,9 @@
                 </li>
                 <li class="nav-btn">
                     <a href="#" class="nominee-page" title="page-3">Page 3</a>
+                </li>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page" title="page-4">Page 4</a>
                 </li>
                 <li id="next-btn" class="nav-btn">
                     <a href="#">Next &raquo;</a>
