--- a/assets/admin/main.html
+++ b/assets/admin/main.html
@@ -1,42 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{page_title}</title>
-    <link type="text/css" rel="stylesheet" href="styles.css" />
-</head>
-<body class="{body_class}">
-<h1>Administrator Panel</h1>
+<html>
+    <head>
+        <title>Welcome | Elliv</title>
+        <meta charset="utf-8" />
+        <link type="text/css" rel="stylesheet" href="../styles.css" />
+    </head>
+    <body class="admin-page">
+        <header id="vote-header">
+            <h1 id="logo">
+                <img src="../images/NEWGOLDE.png" alt="Elliv Logo" />
+            </h1>
+            <h2>Administrator Panel</h2>
+        </header>
+<section class="admin-panel">
 
 <a class="back-to-poll" href="/poll/index/">&larr; Back to poll</a>
 
-<a class="reset-ballot" href="/admin/reset_ballot/" title="Parmanently reset your own ballot">Reset ballot</a>
-{polls}
-<h2>{title}</h2>
+<a class="reset-ballot" href="/admin/reset_ballot/" title="Permanently reset your own ballot">Reset ballot</a>
+
+<h2>Elliv 2017 Poll Results</h2>
 <ul class="question-list">
-    {questions}
     <li class="question">
         <div class="question-info">
-            <h3>{label}</h3>
-            {details}
+            <h3>Unsung Hero</h3>
         </div>
         <div class="question-results">
             <ul class="option-list">
-                {options}
                 <li class="option">
-                    <p class="option-label">{option_label}</p>
+                    <p class="option-label">Rebecca Adams</p>
                     <div class="votes">
-                        <div class="vote-bar" style="width:{percentage}%;"></div>
-                        <p class="vote-info">{num_votes} votes; {percentage}%</p>
+                        <div class="vote-bar" style="width:50%;"></div>
+                        <p class="vote-info">230 votes; 50%</p>
                     </div>
                 </li>
-                {/options}
+                <li class="option">
+                    <p class="option-label">Auou Suzuki</p>
+                    <div class="votes">
+                        <div class="vote-bar" style="width:15%;"></div>
+                        <p class="vote-info">130 votes; 15%</p>
+                    </div>
+                </li>
+                <li class="option">
+                    <p class="option-label">This name</p>
+                    <div class="votes">
+                        <div class="vote-bar" style="width:35%;"></div>
+                        <p class="vote-info">30 votes; 35%</p>
+                    </div>
+                </li>
             </ul>
         </div>
     </li>
-    {/questions}
+    <li class="question">
+        <div class="question-info">
+            <h3>Unsung Hero</h3>
+        </div>
+        <div class="question-results">
+            <ul class="option-list">
+                <li class="option">
+                    <p class="option-label">Rebecca Adams</p>
+                    <div class="votes">
+                        <div class="vote-bar" style="width:50%;"></div>
+                        <p class="vote-info">230 votes; 50%</p>
+                    </div>
+                </li>
+                <li class="option">
+                    <p class="option-label">Auou Suzuki</p>
+                    <div class="votes">
+                        <div class="vote-bar" style="width:15%;"></div>
+                        <p class="vote-info">130 votes; 15%</p>
+                    </div>
+                </li>
+                <li class="option">
+                    <p class="option-label">This name</p>
+                    <div class="votes">
+                        <div class="vote-bar" style="width:35%;"></div>
+                        <p class="vote-info">30 votes; 35%</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </li>
 </ul>
-{/polls}
+        </section>
 </body>
 </html>
