--- a/assets/authenticate/login.html
+++ b/assets/authenticate/login.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{page_title}</title>
-    <link type="text/css" rel="stylesheet" href="/assets/styles.css" />
-</head>
-<body class="{body_class}">
-<h1><small>Elliv Poll</small><br/>
-    Sign in</h1>
+<html>
+    <head>
+        <title>Welcome | Elliv</title>
+        <meta charset="utf-8" />
+        <link type="text/css" rel="stylesheet" href="../styles.css" />
+    </head>
+    <body>
+        <header id="vote-header">
+            <h1 id="logo">
+                <img src="../images/NEWGOLDE.png" alt="Elliv Logo" />
+            </h1>
+            <h2>Elliv 2017 Poll Sign In</h2>
+        </header>
+<section class="login-page">
+    <form action="{base_url}authenticate/login" method="post" class="login-form">
 
-<form action="{base_url}authenticate/login" method="post">
-    {login_error?}
-    <p class="alert alert-warning">{message}</p>
-    {/login_error?}
+        <p class="alert alert-warning">Please retype your login information</p>
 
-    <p>Please sign in with your Cedarville University username and password.</p>
-    <ul>
-        <li class="control-group">
-            <label class="control-label">Username</label>
-            <div class="controls">
-                <input type="text" name="username" />
-            </div>
-        </li>
-        <li class="control-group">
-            <label class="control-label">Password</label>
-            <div class="controls">
-                <input type="password" name="password" />
-            </div>
-        </li>
-    </ul>
-    <p><input class="button" type="submit" value="Sign in" /></p>
-</form>
+        <p>Please sign in with your Cedarville University username and password.</p>
+        <ul>
+            <li class="control-group">
+                <label class="control-label">Username</label>
+                <div class="controls">
+                    <input type="text" name="username" placeholder="username"/>
+                </div>
+            </li>
+            <li class="control-group">
+                <label class="control-label">Password</label>
+                <div class="controls">
+                    <input type="password" name="password" placeholder="password"/>
+                </div>
+            </li>
+        </ul>
+        <p><input class="button" type="submit" value="Sign in" /></p>
+    </form>
+        </section>
 </body>
 </html>
