--- a/assets/review.html
+++ b/assets/review.html
@@ -1,8 +1,7 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-   bzz
     <head>
-        <title>Vote | Elliv</title>
+        <title>Review | Elliv</title>
         <meta charset="utf-8" />
         <link type="text/css" rel="stylesheet" href="styles.css" />
     </head>
@@ -11,40 +10,56 @@
             <h1 id="logo">
                 <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
             </h1>
-            <p>Secret Talent</p>
-            <span id="click-msg">Click the names to read more!</span>
+            <h2>Review Your Responses</h2>
         </header>
         <section id="vote-main">
-<div class="question">
-    <h1><img src="#" alt="Elliv"></h1>
-    <h2>Are you ready to submit?</h2>
-    <div class="award-description">
-        <p>You can review your answers now, but you will not be able to change your selections after submitting your ballot.</p>
-    </div>
+            <div class="question">
+                <h2>Are you ready to submit?</h2>
+                <div class="award-description">
+                    <p>You can review your answers now, but you will not be able to change your selections after submitting your ballot.</p>
+                </div>
+<!--
+                {has_ballot_items?} -->
+                <p class="icon-description">Click on an award to go back and change your answer.</p>
+                <!-- {/has_ballot_items?}
 
-    {has_ballot_items?}
-    <p class="icon-description">Click on an award to go back and change your answer.</p>
-    <a class="btn btn-submit" href="/poll/end/{poll_id}">Submit Ballot</a>
-    {/has_ballot_items?}
-
-    {has_no_ballot_items?}
-    <p class="icon-description">No nominees are selected. <a href="/poll/question/1">Return to poll questions &raquo;</a></p>
-    {/has_no_ballot_items?}
-</div>
-<div class="options">
-    {has_ballot_items?}
-    <ul>
-        {ballot_items}
-        <li class="award" id="award-{order}">
-            <a class="selection" href="/poll/question/{poll_id}/{order}/1">
-                <small>{question_label}</small><br/>
-                {option_selected}
-            </a>
-        </li>
-        {/ballot_items}
-    </ul>
-    {/has_ballot_items?}
-</div>
+                {has_no_ballot_items?}
+                <p class="icon-description">No nominees are selected. <a href="/poll/question/1">Return to poll questions &raquo;</a></p>
+                {/has_no_ballot_items?} -->
+            </div>
+            <div class="options">
+                <!-- {has_ballot_items?} -->
+                <ul>
+                    <!-- {ballot_items} -->
+                    <li class="award" id="award-{order}">
+                        <a class="selection" href="/poll/question/{poll_id}/{order}/1">
+                            <small>Best Secret Talent</small><br/>
+                            Sean Miller, Dom Jackson, &amp; Geradlt Stewart
+                        </a>
+                    </li>
+                    <li class="award" id="award-{order}">
+                        <a class="selection" href="/poll/question/{poll_id}/{order}/1">
+                            <small>Unsung Hero</small><br/>
+                            Rebecca Adams
+                        </a>
+                    </li>
+                    <li class="award" id="award-{order}">
+                        <a class="selection" href="/poll/question/{poll_id}/{order}/1">
+                            <small>Cedarville Star</small><br/>
+                            Sarah Berman, Micah Bernard, &amp; Megan Lawrence
+                        </a>
+                    </li>
+                    <li class="award" id="award-{order}">
+                        <a class="selection" href="/poll/question/{poll_id}/{order}/1">
+                            <small>Lookalikes</small><br/>
+                            Ashlynn Kelly &amp; Kathryn Dougherty
+                        </a>
+                    </li>
+                    <!-- {/ballot_items} -->
+                </ul>
+              <!--  {/has_ballot_items?} -->
+              <a class="btn btn-submit" href="/poll/end/{poll_id}">Submit Ballot</a>
+            </div>
 </section>
  <footer id="vote-footer">
             <ul id="vote-nav">
@@ -60,8 +75,8 @@
                 <li class="nav-btn">
                     <a href="#" class="nominee-page" title="page-3">Page 3</a>
                 </li>
-                <li id="next-btn" class="nav-btn">
-                    <a href="#">Next &raquo;</a>
+                <li class="nav-btn">
+                    <a href="#" class="nominee-page" title="page-4">Page 4</a>
                 </li>
             </ul>
         </footer>
