--- a/assets/review.html
+++ b/assets/review.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link type="text/css" rel="stylesheet" href="styles.css" />
     </head>
-    <body>
+    <body class="review-page">
         <header id="vote-header">
             <h1 id="logo">
                 <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
