--- a/assets/question.html
+++ b/assets/question.html
@@ -27,7 +27,7 @@
                               <div class="modal-header">
                                 <span class="close">&times;</span>
                               </div>
-                               <img src="images/2-MaggieHuff.jpg" />
+                               <img src="images/Elliv_UnsungHero_RebeccaAdams.jpg" />
                                <h2>Rebecca Adams</h2>
                                 <p>&ldquo;She tirelessly serves her team is always willing to help you with whatever you need, even if she doesn't really have the time to give. She sacrifices her time for the good of others.&rdquo;
                                 </p>
@@ -37,7 +37,7 @@
                     <li id="nominee2" class="nominee">
                       <a href="#" class="nominee-vote" id="nominee2" title="Click to vote for this nominee">Vote here</a>
                        <div class="nominee-header">
-                            <a href="#" class="nominee-title">Aogu Suzuki</a>
+                            <a href="#" class="nominee-title">Ashlynn Kelly &amp; Kathryn Dougherty</a>
                             <img src="images/arrow-01.png" class="dropdown-arrow" />
                         </div>
                         <div class="nominee-description">
@@ -45,8 +45,8 @@
                               <div class="modal-header">
                                 <span class="close">&times;</span>
                               </div>
-                               <img src="http://placehold.it/350x300" />
-                               <h2>Aogu Suzuki</h2>
+                               <img src="images/Elliv_StdFacLookAlike_.jpg" />
+                               <h2>Ashlynn Kelly &amp; Kathryn Dougherty</h2>
                                 <p>&ldquo;I've seen him serve again and again; I've seen how he stops whatever he is doing to listen to me and others, to go do something for someone, and to go out of his way to give and be there for people.&rdquo;
                                 </p>
                             </div>
@@ -55,7 +55,7 @@
                     <li id="nominee3" class="nominee">
                        <a href="#" class="nominee-vote" id="nominee1" title="Click to vote for this nominee">Vote here</a>
                         <div class="nominee-header">
-                            <a href="#" class="nominee-title">Miranda Dyson</a>
+                            <a href="#" class="nominee-title">Sarah Berman, Micah Bernard, &amp; Megan Lawrence</a>
                             <img src="images/arrow-01.png" class="dropdown-arrow" />
                         </div>
                         <div class="nominee-description">
@@ -63,9 +63,9 @@
                               <div class="modal-header">
                                 <span class="close">&times;</span>
                               </div>
-                               <img src="http://placehold.it/350x150" />
-                               <h2>Miranda Dyson</h2>
-                                <p>&ldquo;She listens to you and is willing to look past differences to see and understand you.&rdquo;
+                               <img src="images/Elliv_CedarvilleStar_SBMBML.jpg" />
+                               <h2>Sarah Berman, Micah Bernard, &amp; Megan Lawrence</h2>
+                                <p>Pharmacy Research Challenge, in the top 40 of the nation. 
                                 </p>
                             </div>
                         </div>
