Static page and style updates.

--- a/assets/end.html
+++ b/assets/end.html
@@ -10,7 +10,7 @@
             <h1 id="logo">
                 <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
             </h1>
-            <h2>Thank you for completing the Elliv 2017 Poll!</h2>
+            <h2>Thank you for completing the Elliv 2017 Poll</h2>
         </header>
 <section class="poll-end">
 <a class="link-admin" href="/admin/">Admin Panel</a>
