--- a/assets/review.html
+++ b/assets/review.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link type="text/css" rel="stylesheet" href="styles.css" />
     </head>
-    <body class="review-page">
+    <body class="white-page">
         <header id="vote-header">
             <h1 id="logo">
                 <img src="images/NEWGOLDE.png" alt="Elliv Logo" />
@@ -61,27 +61,7 @@
               <a class="btn btn-submit" href="/poll/end/{poll_id}">Submit Ballot</a>
             </div>
 </section>
- <footer id="vote-footer">
-            <ul id="vote-nav">
-               <li id="back-btn" class="nav-btn">
-                    <a href="#">&laquo; Back</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page on-page" title="page-1">Page 1</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page" title="page-2">Page 2</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page" title="page-3">Page 3</a>
-                </li>
-                <li class="nav-btn">
-                    <a href="#" class="nominee-page" title="page-4">Page 4</a>
-                </li>
-            </ul>
-        </footer>
-        <div class="shade"></div>
-    </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="vote.js"></script>
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="vote.js"></script>
 </html>
